# password-manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Credentials.hpp  HelperFunctions.cpp  HelperFunctions.hpp  Main.cpp  Password.h  PasswordManager.cpp  PasswordManager.hpp  Taskfile.yml  vcpkg.json
include/: Credentials.hpp  FileManager.hpp  HelperFunctions.hpp  PasswordManager.hpp
src/: FileManager.cpp  HelperFunctions.cpp  Main.cpp  PasswordManager.cpp
